[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "import-sorter"
version = "0.0.1"
authors = [{ name = "AntiMach", email = "themachinumps@gmail.com" }]
description = "A CLI for sorting imports at the top of a file"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
import-sorter = "import_sorter.main:main"

[project.urls]
"Homepage" = "https://github.com/AntiMach/python-import-sorter"
