[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "import-sorter"
version = "1.0.0"
authors = [{ name = "AntiMach", email = "themachinumps@gmail.com" }]
description = "A CLI for sorting imports at the top of a file"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
import-sorter = "import_sorter.__main__:main"

[project.urls]
"Homepage" = "https://github.com/AntiMach/python-import-sorter"

[tool.import-sorter]
format = "python -m ruff format -"
groups = ["import_sorter"]

[tool.ruff]
line-length = 120
